--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <!-- This line is what actually starts your app -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
